--- a/.github/workflows/handler-destroy.yml
+++ b/.github/workflows/handler-destroy.yml
@@ -7,13 +7,14 @@ on:
 
 jobs:
   azure_public_active_active:
-    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@main
+    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@ah/tf-5370
     secrets: inherit
     name: Destroy resources from Azure Public Active/Active
     if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'public-active-active') }}
     with:
       test_name: Public Active/Active
       utility_test: false
+      is_legacy_deployment: false
       module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
       pull_request_repo_name: ${{ github.event.client_payload.github.payload.repository.full_name }}
       pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
@@ -22,13 +23,14 @@ jobs:
       TFC_token_secret_name: PUBLIC_ACTIVE_ACTIVE_TFC_TOKEN
 
   azure_private_active_active:
-    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@main
+    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@ah/tf-5370
     secrets: inherit
     name: Destroy resources from Azure Private Active/Active
     if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'private-active-active') }}
     with:
       test_name: Private Active/Active
       utility_test: false
+      is_legacy_deployment: false
       module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
       pull_request_repo_name: ${{ github.event.client_payload.github.payload.repository.full_name }}
       pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
@@ -37,13 +39,14 @@ jobs:
       TFC_token_secret_name: PRIVATE_ACTIVE_ACTIVE_TFC_TOKEN
 
   azure_private_tcp_active_active:
-    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@main
+    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@ah/tf-5370
     secrets: inherit
     name: Destroy resources from Azure Private TCP Active/Active
     if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'private-tcp-active-active') }}
     with:
       test_name: Private TCP Active/Active
       utility_test: false
+      is_legacy_deployment: false
       module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
       pull_request_repo_name: ${{ github.event.client_payload.github.payload.repository.full_name }}
       pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
@@ -52,13 +55,14 @@ jobs:
       TFC_token_secret_name: PRIVATE_TCP_ACTIVE_ACTIVE_TFC_TOKEN
 
   azure_standalone_external:
-    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@main
+    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@ah/tf-5370
     secrets: inherit
     name: Destroy resources from Azure Standalone External
     if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'standalone-external') }}
     with:
       test_name: Standalone External
       utility_test: false
+      is_legacy_deployment: false
       module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
       pull_request_repo_name: ${{ github.event.client_payload.github.payload.repository.full_name }}
       pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
@@ -74,13 +78,14 @@ jobs:
         }\n/'
 
   azure_standalone_mounted_disk:
-    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@main
+    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@ah/tf-5370
     secrets: inherit
     name: Destroy resources from Azure Standalone Mounted Disk
     if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'standalone-mounted-disk') }}
     with:
       test_name: Standalone Mounted Disk
       utility_test: false
+      is_legacy_deployment: false
       module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
       pull_request_repo_name: ${{ github.event.client_payload.github.payload.repository.full_name }}
       pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
@@ -92,5 +97,102 @@ jobs:
           organization = "terraform-enterprise-modules-test"\n\
           workspaces {\n\
             name = "azure-standalone-mounted-disk"\n\
+          }\n\
+        }\n/'
+
+  azure_public_active_active_legacy:
+    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@ah/tf-5370
+    secrets: inherit
+    name: Destroy resources from Azure Public Active/Active
+    if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'public-active-active') }}
+    with:
+      test_name: Public Active/Active
+      utility_test: true
+      is_legacy_deployment: true
+      module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
+      pull_request_repo_name: ${{ github.event.client_payload.github.payload.repository.full_name }}
+      pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
+      pull_request_comment_id: ${{ github.event.client_payload.github.payload.comment.id }}
+      work_dir: ./tests/public-active-active
+      TFC_token_secret_name: PUBLIC_ACTIVE_ACTIVE_TFC_TOKEN
+      TFC_workspace_substitution_pattern: s/azure-public-active-active/azure-public-active-active-legacy/
+
+  azure_private_active_active_legacy:
+    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@ah/tf-5370
+    secrets: inherit
+    name: Destroy resources from Azure Private Active/Active
+    if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'private-active-active') }}
+    with:
+      test_name: Private Active/Active
+      utility_test: true
+      is_legacy_deployment: true
+      module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
+      pull_request_repo_name: ${{ github.event.client_payload.github.payload.repository.full_name }}
+      pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
+      pull_request_comment_id: ${{ github.event.client_payload.github.payload.comment.id }}
+      work_dir: ./tests/private-active-active
+      TFC_token_secret_name: PRIVATE_ACTIVE_ACTIVE_TFC_TOKEN
+      TFC_workspace_substitution_pattern: s/azure-private-active-active/azure-private-active-active-legacy/
+
+  azure_private_tcp_active_active_legacy:
+    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@ah/tf-5370
+    secrets: inherit
+    name: Destroy resources from Azure Private TCP Active/Active
+    if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'private-tcp-active-active') }}
+    with:
+      test_name: Private TCP Active/Active
+      utility_test: true
+      is_legacy_deployment: true
+      module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
+      pull_request_repo_name: ${{ github.event.client_payload.github.payload.repository.full_name }}
+      pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
+      pull_request_comment_id: ${{ github.event.client_payload.github.payload.comment.id }}
+      work_dir: ./tests/private-tcp-active-active
+      TFC_token_secret_name: PRIVATE_TCP_ACTIVE_ACTIVE_TFC_TOKEN
+      TFC_workspace_substitution_pattern: s/azure-private-tcp-active-active/azure-private-tcp-active-active-legacy/
+
+  azure_standalone_external_legacy:
+    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@ah/tf-5370
+    secrets: inherit
+    name: Destroy resources from Azure Standalone External
+    if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'standalone-external') }}
+    with:
+      test_name: Standalone External
+      utility_test: true
+      is_legacy_deployment: true
+      module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
+      pull_request_repo_name: ${{ github.event.client_payload.github.payload.repository.full_name }}
+      pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
+      pull_request_comment_id: ${{ github.event.client_payload.github.payload.comment.id }}
+      work_dir: ./tests/standalone-external
+      TFC_token_secret_name: STANDALONE_EXTERNAL_TFC_TOKEN
+      TFC_workspace_substitution_pattern: 's/terraform {/terraform {\n\
+        backend "remote" {\n\
+          organization = "terraform-enterprise-modules-test"\n\
+          workspaces {\n\
+            name = "azure-standalone-external-legacy"\n\
+          }\n\
+        }\n/'
+
+  azure_standalone_mounted_disk_legacy:
+    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@ah/tf-5370
+    secrets: inherit
+    name: Destroy resources from Azure Standalone Mounted Disk
+    if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'standalone-mounted-disk') }}
+    with:
+      test_name: Standalone Mounted Disk
+      utility_test: true
+      is_legacy_deployment: true
+      module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
+      pull_request_repo_name: ${{ github.event.client_payload.github.payload.repository.full_name }}
+      pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
+      pull_request_comment_id: ${{ github.event.client_payload.github.payload.comment.id }}
+      work_dir: ./tests/standalone-mounted-disk
+      TFC_token_secret_name: STANDALONE_MOUNTED_DISK_TFC_TOKEN
+      TFC_workspace_substitution_pattern: 's/terraform {/terraform {\n\
+        backend "remote" {\n\
+          organization = "terraform-enterprise-modules-test"\n\
+          workspaces {\n\
+            name = "azure-standalone-mounted-disk-legacy"\n\
           }\n\
         }\n/'
