--- a/.github/workflows/handler-destroy.yml
+++ b/.github/workflows/handler-destroy.yml
@@ -6,7 +6,7 @@ on:
       - destroy-command
 
 jobs:
-  azure_public_active_active:
+  public_active_active:
     uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@ah/tf-5370
     secrets: inherit
     name: Destroy resources from Azure Public Active/Active
@@ -22,7 +22,7 @@ jobs:
       work_dir: ./tests/public-active-active
       TFC_token_secret_name: PUBLIC_ACTIVE_ACTIVE_TFC_TOKEN
 
-  azure_private_active_active:
+  private_active_active:
     uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@ah/tf-5370
     secrets: inherit
     name: Destroy resources from Azure Private Active/Active
@@ -38,7 +38,7 @@ jobs:
       work_dir: ./tests/private-active-active
       TFC_token_secret_name: PRIVATE_ACTIVE_ACTIVE_TFC_TOKEN
 
-  azure_private_tcp_active_active:
+  private_tcp_active_active:
     uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@ah/tf-5370
     secrets: inherit
     name: Destroy resources from Azure Private TCP Active/Active
@@ -54,7 +54,7 @@ jobs:
       work_dir: ./tests/private-tcp-active-active
       TFC_token_secret_name: PRIVATE_TCP_ACTIVE_ACTIVE_TFC_TOKEN
 
-  azure_standalone_external:
+  standalone_external:
     uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@ah/tf-5370
     secrets: inherit
     name: Destroy resources from Azure Standalone External
@@ -77,7 +77,7 @@ jobs:
           }\n\
         }\n/'
 
-  azure_standalone_mounted_disk:
+  standalone_mounted_disk:
     uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@ah/tf-5370
     secrets: inherit
     name: Destroy resources from Azure Standalone Mounted Disk
@@ -100,7 +100,7 @@ jobs:
           }\n\
         }\n/'
 
-  azure_public_active_active_legacy:
+  public_active_active_legacy:
     uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@ah/tf-5370
     secrets: inherit
     name: Destroy resources from Azure Public Active/Active
@@ -117,7 +117,7 @@ jobs:
       TFC_token_secret_name: PUBLIC_ACTIVE_ACTIVE_TFC_TOKEN
       TFC_workspace_substitution_pattern: s/azure-public-active-active/azure-public-active-active-legacy/
 
-  azure_private_active_active_legacy:
+  private_active_active_legacy:
     uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@ah/tf-5370
     secrets: inherit
     name: Destroy resources from Azure Private Active/Active
@@ -134,7 +134,7 @@ jobs:
       TFC_token_secret_name: PRIVATE_ACTIVE_ACTIVE_TFC_TOKEN
       TFC_workspace_substitution_pattern: s/azure-private-active-active/azure-private-active-active-legacy/
 
-  azure_private_tcp_active_active_legacy:
+  private_tcp_active_active_legacy:
     uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@ah/tf-5370
     secrets: inherit
     name: Destroy resources from Azure Private TCP Active/Active
@@ -151,7 +151,7 @@ jobs:
       TFC_token_secret_name: PRIVATE_TCP_ACTIVE_ACTIVE_TFC_TOKEN
       TFC_workspace_substitution_pattern: s/azure-private-tcp-active-active/azure-private-tcp-active-active-legacy/
 
-  azure_standalone_external_legacy:
+  standalone_external_legacy:
     uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@ah/tf-5370
     secrets: inherit
     name: Destroy resources from Azure Standalone External
@@ -174,7 +174,7 @@ jobs:
           }\n\
         }\n/'
 
-  azure_standalone_mounted_disk_legacy:
+  standalone_mounted_disk_legacy:
     uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@ah/tf-5370
     secrets: inherit
     name: Destroy resources from Azure Standalone Mounted Disk
